# zephyon-protocol

./: .gitignore  Anchor.toml  Cargo.lock.backup_new  Cargo.toml  README.md  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json  tsconfig.mocha.json.bak
protocol/programs/protocol/: Cargo.toml
zephyon-protocol/: .gitignore  .mocharc.cjs  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
zephyon-protocol/compat_shim/: Cargo.toml
zephyon-protocol/devnet-backend/: package.json  tsconfig.json
zephyon-protocol/devnet-backend/src/: server.ts
zephyon-protocol/docs/: ARCHITECTURE.md
zephyon-protocol/docs/grant/: architecture_diagram.md  budget_outline.md  milestones.md  payment_flow_diagram.md  solana_grant_draft.md
zephyon-protocol/docs/release/: devnet_beta_readiness.md
zephyon-protocol/docs/tokenomics/: SUBSCRIPTION_OR_STAKE.md  ZERA_ECONOMIC_FRAMEWORK_V1.md  ZERA_SUPPLY_ALLOCATION.md
zephyon-protocol/gmail.users/: gmail_users.txt
zephyon-protocol/programs/protocol/: Cargo.toml
zephyon-protocol/scripts/: deposit_devnet.ts  init_treasury_devnet.ts  pause_devnet.ts  pay_devnet.ts  protocol_lab.ts  simulate_mini_economy.ts  simulate_payment_batch.ts  smoke_test_resilience_engine.ts  smoke_test_rpc_provider_config.ts  smoke_test_runtime_integration.ts  unpause_devnet.ts
zephyon-protocol/src/: index.ts
zephyon-protocol/src/adapters/: index.ts
zephyon-protocol/src/compliance/: complianceCheck.ts  complianceService.ts
zephyon-protocol/src/config/: index.ts
zephyon-protocol/src/economics/: analytics.ts  engine.ts  index.ts  policy.ts  simulation.ts  treasury.ts
zephyon-protocol/src/identity/: identityVerification.ts  index.ts  participantIdentity.ts  verifiedIdentity.ts
zephyon-protocol/src/infrastructure/: providerHistory.ts  rpcHealth.ts  rpcProviderConfig.ts
zephyon-protocol/src/living/: index.ts  onboarding.ts  participant.ts  pipeline.ts  registry.ts  types.ts
zephyon-protocol/src/policy/: policyContext.ts  policyDecision.ts  policyEngine.ts  policyService.ts
zephyon-protocol/src/protocolLab/: batchPaymentSimulator.ts  bootstrap.ts  diagnostics.ts  economicLedger.ts  health.ts  index.ts  ledgerAnalytics.ts  paymentInstructionBuilder.ts  paymentSimulator.ts  rpc.ts  runner.ts  scenarioParticipants.ts  simulation.ts
zephyon-protocol/src/resilience/: failure.ts  index.ts  recovery.ts
zephyon-protocol/src/risk/: riskDecision.ts  riskFactors.ts  riskService.ts
zephyon-protocol/src/runtime/: index.ts  paymentDecisionPipeline.ts  paymentRuntime.ts
zephyon-protocol/src/settlement/: index.ts  (+4 more)
zephyon-protocol/tests/: 00_governance_events.spec.ts  _helpers.ts  deposit_core09.spec.ts  deposit_spl.spec.ts  deposit_spl_receipt.spec.ts  governance_indexer_readiness.spec.ts  initialize_treasury.spec.ts  mocha.setup.cjs  protocol_armor_core16.spec.ts  receipt_indexer_readiness.spec.ts  receipt_invariants_final.spec.ts  receipt_pda_determinism.spec.ts  register_user_core08.spec.ts  spl_pay.spec.ts  spl_roundtrip.spec.ts  stress_pause_flip.spec.ts  stress_spl_pay.spec.ts  stress_tier2_interleaved.spec.ts  stress_tier2_multiop.spec.ts  stress_tier3_multi_recipient.spec.ts  stress_tier3a_multi_recipient.spec.ts  stress_tier3b_pause_windows.spec.ts  stress_tier3c_multi_mint.spec.ts  stress_tier3e_pause_boundary_race.spec.ts  stress_tier3f_stale_receipt_reject.spec.ts  stress_tier4_adversarial.spec.ts  withdraw_armor.spec.ts  withdraw_core10.spec.ts  withdraw_spl.spec.ts  withdraw_spl_receipt.spec.ts  withdraw_spl_receipt_unauthorized.spec.ts  withdraw_unauthorized.spec.ts  zephyon_guardrails_core06.spec.ts
zephyon-protocol/tests_legacy/: protocol.old
(+215 files in other folders)
