[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
toml_parser   = "=1.0.2"
toml_edit     = "=0.22.20"
indexmap      = "=2.6.0"
toml_datetime = "=0.6.5"



