[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace]
members = ["programs/*", "compat_shim"]
resolver = "2"

[workspace.dependencies]
toml_edit        = "=0.22.27"
toml_parser      = "=1.0.2"
proc-macro-crate = "=3.3.0"
generic-array    = "=0.14.6"
