[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "protocol"

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.32.1", features = ["token", "associated_token"] }



[features]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]






